@@ -15,6 +15,7 @@ import pl.edu.agh.iosr.service.LeaderService;
 
 import javax.servlet.http.HttpServletRequest;
 import pl.edu.agh.iosr.cdm.ProposalRepository;
+import pl.edu.agh.iosr.service.ProposerService;
 
 import javax.servlet.http.HttpServletRequest;
 import java.util.Collections;
@@ -28,12 +29,13 @@ public class ProposerController {
     final static Logger logger = LoggerFactory.getLogger(ProposerController.class);
 
     @Autowired
+    private ProposerService proposerService;
+
+    @Autowired
     private NodesRegistryRepository nodesRegistryRepository;
 
     @Autowired
     private ProposalRepository proposalRepository;
-
-    private static long id = 0;
 
     private HashMap<Long, HashMap<Node, Boolean>> quorums = new HashMap<>();
 
@@ -43,10 +45,16 @@ public class ProposerController {
     @RequestMapping("/propose")
     public Proposal propose(HttpServletRequest request) {
         if(leaderService.isLeader(request.getRequestURL().toString())){
-            quorums.put(new Long(id++), getMinimalQuorum());
+            String url = request.getRequestURL().toString();
+            url = url.split("//")[1].split("/")[0].split(":")[1];
+            long id = (int) (System.currentTimeMillis() / 1000L) % Lists.newArrayList(nodesRegistryRepository.findAll()).size() + Integer.valueOf(url);
+            HashMap<Node, Boolean> quorum = getMinimalQuorum();
+            quorums.put(new Long(id), quorum);
             logger.debug("created proposal with id: " + id);
-            long id = (int) (System.currentTimeMillis() / 1000L) % Lists.newArrayList(nodesRegistryRepository.findAll()).size() + Integer.valueOf(request.getLocalName());
-            return Proposal.builder().id(id).server(request.getLocalName()).build();
+            //TODO: Proposal value?
+            Proposal proposal = Proposal.builder().id(id).server(url).build();
+            proposerService.sendProposalToQuorum(quorum, proposal);
+            return proposal;
         }
         else{
             return null;
@@ -56,14 +64,19 @@ public class ProposerController {
     @RequestMapping("/accept")
     public Proposal accept(@RequestBody Proposal proposal) {
         HashMap<Node, Boolean> accepted = quorums.get(proposal.getId());
-        accepted.get(proposal.getServer());
+        for(Node node : accepted.keySet()){
+            if (node.getNodeUrl().equals(proposal.getServer())){
+                accepted.put(node, true);
+            }
+        }
 
+        return null;
     }
 
     private HashMap<Node, Boolean> getMinimalQuorum(){
         List<Node> nodes = Lists.newArrayList(nodesRegistryRepository.findAll());
         Collections.shuffle(nodes);
-        List<Node> nodesHalf = nodes.subList(0, (nodes.size()%2));
+        List<Node> nodesHalf = nodes.subList(0, (int) Math.floor(nodes.size()/2)+1);
         HashMap<Node, Boolean> quorum = new HashMap<Node, Boolean>();
         for(Node node : nodesHalf){
             quorum.put(node, false);
